<resources>
    <string name="app_name">CarCost</string>

    <string name="lay_refuel_statistics_add_data">Add data</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_refuel">AddRefuelActivity</string>

    <string name="lay_add_station_name_text">Name</string>
    <string name="lay_add_refuel_photo_receipt_btn">Add photo</string>
    <string name="lay_add_refuel_distance">Distance</string>
    <string name="lay_add_refuel_price">Price</string>
    <string name="lay_add_refuel_paid">Paid</string>
    <string name="lay_add_refuel_quantity">Quantity</string>
    <string name="lay_add_refuel_add_station_btn">Add station</string>
    <string name="title_activity_add_station">AddStationActivity</string>
    <string name="lay_add_station_street_text">Street</string>
    <string name="lay_add_station_name_hint">how do you call it</string>
    <string name="lay_add_station_street_hint">street</string>
    <string name="lay_add_station_add_location">Use current position</string>
    <string name="lay_add_station_save_station">Save</string>
    <string name="lay_add_station_cancel_station">Cancel</string>
    <string name="lay_add_station_distributor_text">Distributor</string>
    <string name="lay_add_station_distributor_hint">distributor name</string>
    <string name="lay_add_station_location">Coordinates</string>
    <string name="lay_add_station_lat">latitude</string>
    <string name="lay_add_station_long">longitude</string>
    <string name="station_address_text">Address</string>
    <string name="station_photo_button">Add photo</string>
    <string name="station_name_text">Name</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="coordinates">Coordinated</string>
    <string name="lay_add_station_country_text">Country</string>
    <string name="lay_add_station_building_text">Building</string>
    <string name="lay_add_station_building_hint">building number</string>
    <string name="lay_add_station_country_hint">country name</string>
    <string name="lay_add_station_city_text">City</string>
    <string name="lay_add_station_city_hint">City</string>
    <string name="lay_refuel_statistics_chart_description">dynamics of your car consumption</string>
    <string name="lay_add_car_name_text">Name</string>
    <string name="lay_add_car_name_hint">short name</string>
    <string name="lay_location_latitude">lat</string>
    <string name="lay_location_longitude">long</string>
    <string name="lay_refuel_statistics_add_station">add station</string>
    <string name="lay_refuel_statistics_start_location">start location</string>
    <string name="lay_add_car_manufacturer_text">Manufacturer</string>
    <string name="lay_add_car_manufacturer_hint">BMW, Mercedes, FIAT</string>
    <string name="lay_add_car_model_text">Model</string>
    <string name="lay_add_car_model_hint">320i, AMG, Panda</string>
    <string name="lay_add_car_cancel_btn">Cancel</string>
    <string name="lay_add_car_save_btn">Save</string>
    <string name="title_activity_add_car_info">Car details</string>
    <string name="title_activity_station">Station Details</string>
    <string name="title_activity_statistics">Your car refuel statistics</string>
    <string name="lay_add_refuel_station_text">Station</string>
    <string name="lay_add_refuel_cancel_btn">Cancel</string>
    <string name="lay_add_refuel_save_btn">Save</string>
    <string name="lay_add_refuel_distance_hint">odometer reading</string>
    <string name="lay_add_refuel_price_hint">cost of a unit of the fuel</string>
    <string name="lay_add_refuel_paid_hint">total amount paid</string>
    <string name="lay_add_refuel_quantity_hint">how many units of fuel are added</string>
</resources>
