<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.carcost.AddStationActivity">

    <TextView
        android:id="@+id/lay_add_station_name_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_name_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lay_add_station_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/lay_add_station_name_text"
        android:layout_toRightOf="@id/lay_add_station_name_text"
        android:hint="@string/lay_add_station_name_hint"
        android:inputType="text" />
    <TextView
        android:id="@+id/lay_add_station_distributor_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_name_text"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_distributor_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lay_add_station_distributor_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lay_add_station_name_input"
        android:layout_toEndOf="@id/lay_add_station_distributor_text"
        android:layout_toRightOf="@id/lay_add_station_distributor_text"
        android:inputType="text"
        android:hint="@string/lay_add_station_distributor_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_distributor_text"
        android:text="@string/lay_add_station_location"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lay_add_station_coordinate_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_add_station_distributor_input"
        android:text="@string/lay_add_station_lat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@id/lay_add_station_coordinate_text"
        android:layout_toEndOf="@id/lay_add_station_coordinate_text"
        android:layout_alignBaseline="@id/lay_add_station_coordinate_text"
        android:id="@+id/lay_add_station_alt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_add_station_distributor_input"
        android:text="@string/lay_add_station_long"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@id/lay_add_station_alt"
        android:layout_toEndOf="@id/lay_add_station_alt"
        android:layout_alignBaseline="@id/lay_add_station_coordinate_text"
        android:id="@+id/lay_add_station_long"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/lay_add_station_street_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_coordinate_text"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_street_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lay_add_station_street_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lay_add_station_name_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lay_add_station_coordinate_text"
        android:layout_toEndOf="@id/lay_add_station_street_text"
        android:layout_toRightOf="@id/lay_add_station_street_text"
        android:inputType="text"
        android:hint="@string/lay_add_station_street_hint" />

    <TextView
        android:id="@+id/lay_add_station_building_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_street_text"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_building_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lay_add_station_building_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lay_add_station_name_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lay_add_station_street_text"
        android:layout_toEndOf="@id/lay_add_station_street_text"
        android:layout_toRightOf="@id/lay_add_station_street_text"
        android:inputType="text"
        android:hint="@string/lay_add_station_building_hint" />

    <TextView
        android:id="@+id/lay_add_station_country_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_building_text"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_country_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lay_add_station_country_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lay_add_station_building_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lay_add_station_building_text"
        android:layout_toEndOf="@id/lay_add_station_country_text"
        android:layout_toRightOf="@id/lay_add_station_country_text"
        android:inputType="text"
        android:hint="@string/lay_add_station_country_hint" />


    <Button
        android:id="@+id/lay_add_station_add_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_country_input"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_add_location"
        />

    <Button
        android:id="@+id/lay_add_station_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_station_add_location_btn"
        android:layout_margin="10dp"
        android:text="@string/lay_add_station_save_station"
        />

    <Button
        android:id="@+id/lay_add_station_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lay_add_station_save_btn"
        android:layout_toEndOf="@id/lay_add_station_save_btn"
        android:layout_margin="10dp"
        android:layout_alignBaseline="@id/lay_add_station_save_btn"
        android:text="@string/lay_add_station_cancel_station"
        />


</RelativeLayout>
