<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.carcost.AddCarInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_car_name_text"
        android:id="@+id/lay_add_car_name_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lay_add_car_name_edit"
        android:text="@string/lay_add_car_name_hint"
        android:layout_alignBaseline="@+id/lay_add_car_name_text"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/lay_add_car_name_text"
        android:layout_toEndOf="@id/lay_add_car_name_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_car_manufacturer_text"
        android:id="@+id/lay_add_car_manufacturer_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_car_name_text"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lay_add_car_manufacturer_edit"
        android:text="@string/lay_add_car_manufacturer_hint"
        android:layout_alignBaseline="@id/lay_add_car_manufacturer_text"
        android:layout_toRightOf="@id/lay_add_car_manufacturer_text"
        android:layout_toEndOf="@id/lay_add_car_manufacturer_text"
        android:layout_below="@+id/lay_add_car_name_edit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_car_model_text"
        android:id="@+id/lay_add_car_model_text"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lay_add_car_manufacturer_text"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lay_add_car_model_edit"
        android:text="@string/lay_add_car_model_hint"
        android:layout_below="@+id/lay_add_car_manufacturer_text"
        android:layout_toRightOf="@+id/lay_add_car_manufacturer_text"
        android:layout_toEndOf="@+id/lay_add_car_manufacturer_text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_car_cancel_btn"
        android:id="@+id/lay_add_car_cancel_btn"
        android:layout_below="@id/lay_add_car_model_text"
        android:layout_margin="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_car_save_btn"
        android:id="@+id/lay_add_car_save_btn"
        android:layout_below="@id/lay_add_car_model_text"
        android:layout_toRightOf="@id/lay_add_car_cancel_btn"
        android:layout_toEndOf="@id/lay_add_car_cancel_btn"
        android:layout_margin="5dp"
        />




</RelativeLayout>
