<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.carcost.AddRefuelActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_refuel_distance"
        android:id="@+id/lay_add_refuel_distance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/lay_add_refuel_distance_hint"
        android:layout_alignBaseline="@id/lay_add_refuel_distance"
        android:id="@+id/lay_add_refuel_distance_input"
        android:layout_toRightOf="@id/lay_add_refuel_distance"
        android:layout_toEndOf="@id/lay_add_refuel_distance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_refuel_price"
        android:id="@+id/lay_add_refuel_price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_refuel_distance"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/lay_add_refuel_price_hint"
        android:layout_alignBaseline="@id/lay_add_refuel_price"
        android:id="@+id/lay_add_refuel_price_input"
        android:layout_toRightOf="@id/lay_add_refuel_price"
        android:layout_toEndOf="@id/lay_add_refuel_price"
        android:layout_below="@id/lay_add_refuel_distance_input"
        android:layout_alignLeft="@id/lay_add_refuel_distance_input"
        android:layout_alignStart="@id/lay_add_refuel_distance_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_refuel_paid"
        android:id="@+id/lay_add_refuel_paid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_refuel_price"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/lay_add_refuel_paid_input"
        android:layout_toRightOf="@id/lay_add_refuel_paid"
        android:layout_alignBaseline="@id/lay_add_refuel_paid"
        android:layout_toEndOf="@id/lay_add_refuel_paid"
        android:hint="@string/lay_add_refuel_paid_hint"
        android:layout_below="@id/lay_add_refuel_price_input"
        android:layout_alignLeft="@id/lay_add_refuel_price_input"
        android:layout_alignStart="@id/lay_add_refuel_price_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lay_add_refuel_quantity"
        android:id="@+id/lay_add_refuel_quantity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_refuel_paid"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/lay_add_refuel_quantity_input"
        android:layout_below="@id/lay_add_refuel_paid_input"
        android:hint="@string/lay_add_refuel_quantity_hint"
        android:layout_alignBaseline="@id/lay_add_refuel_quantity"
        android:layout_toRightOf="@id/lay_add_refuel_quantity"
        android:layout_toEndOf="@id/lay_add_refuel_quantity"
        android:layout_alignLeft="@id/lay_add_refuel_paid_input"
        android:layout_alignStart="@id/lay_add_refuel_paid_input" />

    <TextView android:id="@+id/lay_add_refuel_station_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/lay_add_refuel_quantity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/lay_add_refuel_station_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="10dp"
        />

    <Spinner
        android:id="@+id/lay_add_refuel_station_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/lay_add_refuel_quantity_input"
        android:layout_alignLeft="@id/lay_add_refuel_quantity_input"
        android:layout_below="@id/lay_add_refuel_quantity_input"
        android:layout_toRightOf="@id/lay_add_refuel_station_text"
        android:layout_toEndOf="@id/lay_add_refuel_station_text"
        android:layout_alignTop="@id/lay_add_refuel_station_text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_refuel_photo_receipt_btn"
        android:id="@+id/lay_add_receipt_photo"
        android:layout_below="@id/lay_add_refuel_station_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_refuel_add_station_btn"
        android:id="@+id/lay_add_station_btn"
        android:layout_toRightOf="@id/lay_add_receipt_photo"
        android:layout_toEndOf="@id/lay_add_receipt_photo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lay_add_receipt_photo"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_refuel_cancel_btn"
        android:id="@+id/lay_add_refuel_cancel_btn"
        android:layout_below="@id/lay_add_station_btn"
        android:layout_margin="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_add_refuel_save_btn"
        android:id="@+id/lay_add_refuel_save_btn"
        android:layout_alignBaseline="@id/lay_add_refuel_cancel_btn"
        android:layout_toRightOf="@id/lay_add_refuel_cancel_btn"
        android:layout_toEndOf="@id/lay_add_refuel_cancel_btn"
        android:layout_margin="5dp"
        />


</RelativeLayout>
