<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RefuelStatisticsActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_refuel_statistics_add_data"
        android:id="@+id/lay_refuel_statistics_add_data"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay_refuel_statistics_chart"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lay_refuel_statistics_chart_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_refuel_statistics_start_location"
        android:id="@+id/lay_refuel_statistics_start_location"
        android:layout_below="@id/lay_refuel_statistics_chart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lay_refuel_statistics_add_station"
        android:id="@+id/lay_refuel_statistics_add_station"
        android:layout_below="@id/lay_refuel_statistics_start_location" />



</RelativeLayout>
