<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.carcost.StationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_name_text"
        android:id="@+id/layout_station_name_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_station_name_edit"
        android:layout_toRightOf="@id/layout_station_name_text"
        android:layout_toEndOf="@id/layout_station_name_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/layout_station_name_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_address_text"
        android:layout_margin="10dp"
        android:id="@+id/layout_station_address_text"
        android:layout_below="@id/layout_station_name_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_station_address_edit"
        android:layout_alignTop="@+id/layout_station_address_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/layout_station_address_text"
        android:layout_toRightOf="@+id/layout_station_address_text"
        android:layout_toEndOf="@+id/layout_station_address_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_photo_button"
        android:id="@+id/layout_station_photo_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_below="@id/layout_station_address_text"/>


</RelativeLayout>
